# RPS

./: .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  config.toml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml
src/: main.rs
src/static/: app.1b2c4228.min.js  app.js  app.js.backup  index.html  paste.html  robots.txt  site.webmanifest  sitemap.xml  style.7355aa1d.min.css  style.css  style.css.backup
