[package]
name = "RPS"
version = "0.1.0"
edition = "2021"
description = "RPS | Rust Paste Server | Pastebin / Hastebin Server | Lightweight & Ultra Fast"
authors = ["Tristan Budd <contact@tristanbudd.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tristanbudd/RPS"
homepage = "https://github.com/tristanbudd/RPS"
keywords = ["pastebin", "hastebin", "server", "paste", "lightweight"]
categories = ["web-programming::http-server", "network-programming"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
uuid = { version = "1.8", features = ["v4", "serde"] }